rework jumpnav, disable for deploy of fix to staff list

--- a/templates/components/globals/base.scss
+++ b/templates/components/globals/base.scss
@@ -375,11 +375,12 @@ body {
     }
   }
 
-  table.staff-listing {
+  .staff-listing {
     @extend %wrapper;
     @include rem(margin-bottom, 30px);
     @include rem(margin-top, 30px);
     border-collapse: collapse;
+    display: table;
     margin-left: 3%;
     margin-right: 3%;
     width: 94%;
@@ -395,25 +396,40 @@ body {
 
       img {
         border-radius: 50%;
-        max-width: 100%;
-        max-height: 100%;
+        display: block;
+        width: 100%;
+        height: 100%;
       }
 
       .profile {
-        @include rem(height, 50px);
-        @include rem(margin-right, 30px);
-        @include rem(width, 50px);
-        border-radius: 50%;
-        display: inline-block;
+        background-color: $white;
+        display: table-cell;
+        vertical-align: top;
+
+        .frame {
+          @include rem(height, 50px);
+          @include rem(width, 50px);
+          background-color: $lightestblue;
+          border-radius: 50%;
+        }
+      }
+
+      .details {
+        @include rem(padding-left, 25px);
+        @include rem(width, 570px);
+        display: table-cell;
+        line-height: 1.4;
         vertical-align: middle;
       }
 
-      td {
+      td,
+      li {
         border-bottom: 0 none;
         border-top: 1px solid $lightergray;
       }
 
-      & > tbody > tr:first-child > td {
+      & > tbody > tr:first-child > td,
+      li:first-child {
         border-top: 0 none;
       }
     }
@@ -426,6 +442,11 @@ body {
     a {
       color: $black;
       font-weight: $bold;
+    }
+
+    li {
+      @include rem(padding, 10px 0);
+      list-style-type: none;
     }
 
     tr {
